# forecast-sidecar

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .lychee.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: build.yml  deploy-production.yml  deploy-staging.yml  drift-check.yml  external-probe.yml  iac.yml  lint.yml  test.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ci_helpers/: check_secret_bindings.py
configs/: lightgbm_defaults.yaml
docker/: service.entrypoint.sh  trainer.entrypoint.sh
docker/fake-gcs/: seed.sh
docs/: architecture.md
infra/environments/production/: backend.tf  main.tf  terraform.tfvars  variables.tf
infra/environments/staging/: backend.tf  main.tf  terraform.tfvars  variables.tf
infra/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
infra/modules/cloud_run_job/: main.tf  outputs.tf  variables.tf
infra/modules/cloud_run_service/: main.tf  outputs.tf  variables.tf
infra/modules/cloud_tasks/: main.tf  outputs.tf  variables.tf
infra/modules/gcs_bucket/: main.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/secret_manager/: main.tf  (+2 more)
specs/001-forecast-sidecar-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/forecast_sidecar/: __init__.py  __main__.py  auth.py  cache.py  config.py  main.py  manifest.py  observability.py  schemas.py  seeds.py  storage.py  train_cli.py
tests/: _helpers.py  conftest.py
tests/api/: test_forecast_errors.py  test_forecast_happy.py  test_health_ready.py
tests/contract/: test_env_contract.py  test_feature_config.py  test_openapi_shape.py
tests/fakes/: gcs.py
tests/fixtures/: sample_feature_config.json  sample_history.csv  sample_request.json
tests/integration/: test_coverage_band.py  test_perf_cold_load.py  test_perf_train.py  test_perf_warm_cache.py  test_predict_smoke.py  test_quickstart.py  test_scenario_overrides.py  test_train_failure_modes.py  test_train_idempotent.py  test_train_promotion_race.py  test_train_smoke.py
tests/unit/: test_auth.py  test_baselines.py  test_cache.py  test_config.py  test_features.py  test_manifest.py  test_observability.py  test_seeds.py  test_storage_atomic.py
(+8 files in other folders)
